--- a/index.html
+++ b/index.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>SCFHS Prometric Adaptive Exam</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .card {
-      background: #ffffff;
-      padding: 30px 40px;
-      border-radius: 8px;
-      width: 420px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-    h1 {
-      font-size: 20px;
-      margin-bottom: 10px;
-    }
-    .subtitle {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 20px;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-    }
-    input {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 25px;
-      width: 100%;
-      padding: 10px;
-      background: #2c7be5;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      font-size: 15px;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-    .note {
-      margin-top: 15px;
-      font-size: 12px;
-      color: #777;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>SCFHS Prometric Adaptive Exam</title>
+<style>
+body{font-family:Arial;background:#f4f6f8;margin:0;padding:0}
+.container{max-width:800px;margin:40px auto;background:#fff;padding:30px;border-radius:6px;box-shadow:0 2px 10px rgba(0,0,0,.15)}
+h1{margin-top:0}
+button{padding:10px 16px;font-size:15px}
+.option{margin:8px 0}
+.hidden{display:none}
+</style>
 </head>
 <body>
-  <div class="card">
-    <h1>SCFHS Prometric Adaptive Exam</h1>
-    <div class="subtitle">
-      Format: Easy → Medium → Hard (Adaptive)
-    </div>
 
-    <label>Candidate Name / ID:</label>
-    <input type="text" value="Giyono" disabled />
+<div class="container" id="startScreen">
+  <h1>SCFHS Prometric Adaptive Exam</h1>
+  <p><strong>Format:</strong> Easy → Medium → Hard (Adaptive)</p>
+  <label>Candidate Name:</label><br>
+  <input id="name" style="width:100%;padding:8px"><br><br>
+  <label>Candidate ID:</label><br>
+  <input id="cid" style="width:100%;padding:8px"><br><br>
+  <button onclick="startExam()">Start Exam</button>
+</div>
 
-    <button>Start Exam</button>
+<div class="container hidden" id="examScreen">
+  <h2 id="levelLabel"></h2>
+  <p id="question"></p>
+  <div id="options"></div>
+</div>
 
-    <div class="note">
-      * Demo / dummy landing page only. Exam engine disabled.
-    </div>
-  </div>
+<div class="container hidden" id="resultScreen">
+  <h2>Exam Result</h2>
+  <p id="resultText"></p>
+</div>
+
+<script>
+let level='EASY';
+let index=0;
+let wrong=0;
+
+const questions={
+  EASY:[
+    {q:'A client suddenly develops airway obstruction. What is the FIRST action?',o:['Document','Call family','Open airway','Prepare discharge'],a:2},
+    {q:'A patient becomes cyanotic and short of breath. Priority action?',o:['Notify physician','Apply oxygen','Reassure','Chart findings'],a:1}
+  ],
+  MEDIUM:[
+    {q:'Post-op client has mild redness at incision. Best action?',o:['Notify surgeon','Document and monitor','Start antibiotics','Apply pressure'],a:1}
+  ],
+  HARD:[
+    {q:'Competent patient refuses treatment. Nurse should?',o:['Proceed per order','Respect refusal and document','Ask family to consent','Call security'],a:1}
+  ]
+};
+
+function startExam(){
+  if(!name.value||!cid.value){alert('Enter Name and ID');return}
+  startScreen.classList.add('hidden');
+  examScreen.classList.remove('hidden');
+  loadQuestion();
+}
+
+function loadQuestion(){
+  levelLabel.innerText='LEVEL: '+level;
+  let q=questions[level][index];
+  question.innerText=q.q;
+  options.innerHTML='';
+  q.o.forEach((opt,i)=>{
+    let d=document.createElement('div');
+    d.className='option';
+    d.innerHTML=`<button onclick="answer(${i})">${opt}</button>`;
+    options.appendChild(d);
+  });
+}
+
+function answer(i){
+  let q=questions[level][index];
+  if(i!==q.a) wrong++;
+  index++;
+
+  if(index>=questions[level].length){
+    if(level==='EASY' && wrong<2){level='MEDIUM';index=0}
+    else if(level==='MEDIUM' && wrong<3){level='HARD';index=0}
+    else {endExam();return}
+  }
+  loadQuestion();
+}
+
+function endExam(){
+  examScreen.classList.add('hidden');
+  resultScreen.classList.remove('hidden');
+  resultText.innerText=wrong>=2?'FAIL':'PASS';
+}
+</script>
+
 </body>
 </html>
