--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ button{padding:12px 22px;font-size:16px;cursor:pointer}
 <h2>SCFHS Prometric Adaptive Exam</h2>
 <p><strong>Format:</strong> Easy → Medium → Hard (Adaptive)</p>
 <p>Candidate Name / ID (optional)</p>
-<p><strong>Giyono</strong></p>
+<input type="text" id="candidate" placeholder="Enter name or ID" style="padding:10px;width:80%;margin-bottom:15px" />
+<br>
 <button id="startBtn">Start Exam</button>
 </div>
 
