--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ button{padding:12px 22px;font-size:16px;cursor:pointer}
 <script>
 // ===== minimal, clean, GitHub-safe engine =====
 const questions=[
- {q:"A patient suddenly develops shortness of breath and cyanosis. What is the PRIORITY nursing action?",o:["Notify physician","Assess airway","Document findings","Prepare medication"],a:1},
- {q:"Before administering IV medication, what should the nurse do FIRST?",o:["Flush IV line","Check patient allergies","Administer slowly","Document medication"],a:1}
+ {q:"A patient suddenly develops shortness of breath and cyanosis. What is the PRIORITY nursing action?",o:["Notify physician","Assess airway","Document findings","Prepare medication"],a:1,r:"Airway comes before notification. In any acute respiratory distress, the nurse must first assess and secure the airway before reporting or documenting."},
+ {q:"Before administering IV medication, what should the nurse do FIRST?",o:["Flush IV line","Check patient allergies","Administer slowly","Document medication"],a:1,r:"Allergy verification is a safety priority and must be completed before any medication is administered."}
 ];
 
 let i=0,score=0;
@@ -51,6 +51,14 @@ function load(){
   d.innerHTML=`<label><input type=radio name=ans value=${n}> ${t}</label>`;
   opts.appendChild(d);
  });
+} of ${questions.length}`;
+ qtext.textContent=questions[i].q;
+ opts.innerHTML='';
+ questions[i].o.forEach((t,n)=>{
+  const d=document.createElement('div');
+  d.innerHTML=`<label><input type=radio name=ans value=${n}> ${t}</label>`;
+  opts.appendChild(d);
+ });
 }
 
 document.getElementById('startBtn').onclick=()=>{
@@ -62,11 +70,16 @@ document.getElementById('startBtn').onclick=()=>{
 document.getElementById('nextBtn').onclick=()=>{
  const s=document.querySelector('input[name=ans]:checked');
  if(!s){alert('Select an answer');return;}
- if(+s.value===questions[i].a)score++;
- i++;
- if(i<questions.length){load();}
- else{exam.innerHTML=`<h2>Exam Completed</h2><p>Score: ${score}/${questions.length}</p>`;}
+ const correct = +s.value===questions[i].a;
+ if(correct){score++; i++; if(i<questions.length){load();} else{finish();}}
+ else{
+  alert(`Incorrect. Rationale: ${questions[i].r}`);
+ }
 };
+
+function finish(){
+ exam.innerHTML=`<h2>Exam Completed</h2><p>Score: ${score}/${questions.length}</p>`;
+}
 </script>
 
 </body>
