--- a/index.html
+++ b/index.html
@@ -785,7 +785,13 @@ const questions = [
     "Routine vital signs",
     "Insertion of an IV line",
     "Blood transfusion",
-    "Bedside glucose
+    "Bedside glucose monitoring"
+  ],
+  a: 2,
+  r: "Informed consent is required for invasive procedures such as blood transfusion."
+}
+];
+
 ];
 
 let i = 0;
