--- a/index.html
+++ b/index.html
@@ -768,6 +768,358 @@ const questions = [
     a: 1,
     r: "Falsification of records is unethical and must be reported per policy."
   },
+    {
+    q: "A nurse administers medication without checking patient identification. The patient is unharmed. This is considered:",
+    o: [
+      "An unavoidable error",
+      "Negligence",
+      "Assault",
+      "Defamation"
+    ],
+    a: 1,
+    r: "Failure to follow safety protocols constitutes negligence even if no harm occurs."
+  },
+  {
+    q: "A nurse overhears confidential patient information discussed loudly at the nurses’ station. What should the nurse do?",
+    o: [
+      "Ignore it",
+      "Remind staff to maintain confidentiality",
+      "Document only",
+      "Report to the patient"
+    ],
+    a: 1,
+    r: "The nurse has an ethical and legal duty to protect confidentiality."
+  },
+  {
+    q: "Which action places a nurse at highest legal risk?",
+    o: [
+      "Clarifying an unclear order",
+      "Delegating appropriately",
+      "Failing to document care",
+      "Reporting abnormal findings"
+    ],
+    a: 2,
+    r: "Failure to document implies care was not provided and increases liability."
+  },
+  {
+    q: "A nurse leaves the unit during shift without notifying anyone. This is an example of:",
+    o: [
+      "Negligence",
+      "Abandonment",
+      "Malpractice",
+      "Insubordination"
+    ],
+    a: 1,
+    r: "Abandonment occurs when a nurse leaves assigned patients without proper handoff."
+  },
+  {
+    q: "A patient consents to surgery but refuses blood products. What should the nurse do?",
+    o: [
+      "Ignore the refusal",
+      "Ensure refusal is documented and communicated",
+      "Ask family to decide",
+      "Cancel the surgery"
+    ],
+    a: 1,
+    r: "Partial consent must be respected and clearly documented."
+  },
+  {
+    q: "Which situation most clearly requires mandatory reporting?",
+    o: [
+      "Patient dissatisfaction",
+      "Suspected child abuse",
+      "Medication refusal",
+      "Delayed treatment"
+    ],
+    a: 1,
+    r: "Healthcare providers are legally required to report suspected abuse."
+  },
+  {
+    q: "A nurse is asked to co-sign documentation for care not witnessed. What should the nurse do?",
+    o: [
+      "Sign to help the team",
+      "Refuse to sign",
+      "Sign but add a note",
+      "Delay signing"
+    ],
+    a: 1,
+    r: "Signing undocumented care is falsification and unethical."
+  },
+  {
+    q: "Which task is inappropriate to delegate to a nursing assistant?",
+    o: [
+      "Measuring urine output",
+      "Checking blood glucose",
+      "Teaching insulin injection",
+      "Assisting with hygiene"
+    ],
+    a: 2,
+    r: "Teaching requires professional nursing judgment."
+  },
+  {
+    q: "A nurse follows a physician order that is clearly unsafe without questioning it. The nurse may be liable for:",
+    o: [
+      "Defamation",
+      "Negligence",
+      "Battery",
+      "Invasion of privacy"
+    ],
+    a: 1,
+    r: "Nurses are accountable for questioning unsafe orders."
+  },
+  {
+    q: "Which ethical principle supports respecting a patient’s decision to refuse treatment?",
+    o: [
+      "Justice",
+      "Autonomy",
+      "Beneficence",
+      "Fidelity"
+    ],
+    a: 1,
+    r: "Autonomy respects the patient’s right to make decisions."
+  },
+  {
+    q: "A nurse documents an assessment before actually performing it. This is:",
+    o: [
+      "Efficiency",
+      "Negligence",
+      "Fraudulent documentation",
+      "Delegation error"
+    ],
+    a: 2,
+    r: "Documenting care not performed is falsification."
+  },
+  {
+    q: "A nurse restrains a patient without an order and without immediate danger. This is considered:",
+    o: [
+      "Protective care",
+      "Battery",
+      "Negligence",
+      "Standard practice"
+    ],
+    a: 1,
+    r: "Unjustified restraint is battery and illegal."
+  },
+  {
+    q: "Which scenario best demonstrates advocacy?",
+    o: [
+      "Following all orders",
+      "Questioning a harmful treatment",
+      "Avoiding conflict",
+      "Delegating difficult tasks"
+    ],
+    a: 1,
+    r: "Advocacy involves protecting the patient from harm."
+  },
+  {
+    q: "A nurse shares patient information with another nurse not involved in care. This violates:",
+    o: [
+      "Autonomy",
+      "Confidentiality",
+      "Justice",
+      "Beneficence"
+    ],
+    a: 1,
+    r: "Access to information is limited to those involved in care."
+  },
+  {
+    q: "A patient lacks capacity and no surrogate is available. Who makes decisions in emergencies?",
+    o: [
+      "The nurse",
+      "Hospital administration",
+      "The physician under implied consent",
+      "The family by default"
+    ],
+    a: 2,
+    r: "Implied consent allows life-saving treatment in emergencies."
+  },
+  {
+    q: "Which action most reduces legal risk for nurses?",
+    o: [
+      "Following orders without question",
+      "Clear, timely documentation",
+      "Avoiding incident reports",
+      "Relying on experience"
+    ],
+    a: 1,
+    r: "Documentation is the primary legal evidence of care."
+  },
+  {
+    q: "A nurse refuses an unsafe assignment following policy. This is:",
+    o: [
+      "Insubordination",
+      "Abandonment",
+      "Professional responsibility",
+      "Negligence"
+    ],
+    a: 2,
+    r: "Nurses must refuse assignments that jeopardize patient safety."
+  },
+  {
+    q: "Which situation best illustrates malpractice?",
+    o: [
+      "Error despite proper care",
+      "Failure to meet standard of care causing harm",
+      "Patient dissatisfaction",
+      "Near-miss event"
+    ],
+    a: 1,
+    r: "Malpractice involves harm due to deviation from standard care."
+  },
+  {
+    q: "A nurse provides false reassurance to avoid upsetting a patient. This violates:",
+    o: [
+      "Justice",
+      "Veracity",
+      "Autonomy",
+      "Fidelity"
+    ],
+    a: 1,
+    r: "Veracity requires honesty in communication."
+  },
+  {
+    q: "Which task requires direct RN supervision when delegated?",
+    o: [
+      "Vital signs on stable patient",
+      "Ambulation",
+      "Blood glucose monitoring",
+      "Initial assessment"
+    ],
+    a: 3,
+    r: "Initial assessment cannot be delegated."
+  },
+  {
+    q: "A nurse delays reporting a critical lab result. This may be considered:",
+    o: [
+      "Documentation error",
+      "Negligence",
+      "Battery",
+      "Defamation"
+    ],
+    a: 1,
+    r: "Failure to report critical findings breaches standard of care."
+  },
+  {
+    q: "Which principle focuses on loyalty to professional duties?",
+    o: [
+      "Autonomy",
+      "Justice",
+      "Fidelity",
+      "Nonmaleficence"
+    ],
+    a: 2,
+    r: "Fidelity emphasizes faithfulness to commitments."
+  },
+  {
+    q: "A nurse administers medication after the patient withdrew consent. This is:",
+    o: [
+      "Negligence",
+      "Battery",
+      "Beneficence",
+      "Justice"
+    ],
+    a: 1,
+    r: "Any treatment without consent constitutes battery."
+  },
+  {
+    q: "Which situation requires escalation through the chain of command?",
+    o: [
+      "Routine care delay",
+      "Unsafe physician order",
+      "Patient dissatisfaction",
+      "Staffing preference"
+    ],
+    a: 1,
+    r: "Unsafe orders must be escalated to protect the patient."
+  },
+  {
+    q: "A nurse records another nurse’s password to access records. This violates:",
+    o: [
+      "Autonomy",
+      "Security and confidentiality laws",
+      "Delegation principles",
+      "Informed consent"
+    ],
+    a: 1,
+    r: "Unauthorized access breaches data security laws."
+  },
+  {
+    q: "Which action best demonstrates nonmaleficence?",
+    o: [
+      "Providing equal care",
+      "Avoiding harm",
+      "Respecting refusal",
+      "Keeping promises"
+    ],
+    a: 1,
+    r: "Nonmaleficence means do no harm."
+  },
+  {
+    q: "A nurse omits documentation to save time. Legally, this implies:",
+    o: [
+      "Care was delayed",
+      "Care was not provided",
+      "Care was delegated",
+      "Care was refused"
+    ],
+    a: 1,
+    r: "Legally, undocumented care is assumed not done."
+  },
+  {
+    q: "Which patient scenario has the highest ethical complexity?",
+    o: [
+      "Stable patient refusing education",
+      "Confused patient without surrogate",
+      "Patient requesting pain medication",
+      "Routine discharge"
+    ],
+    a: 1,
+    r: "Lack of capacity without a decision-maker creates ethical and legal challenges."
+  },
+  {
+    q: "A nurse shares patient information for educational purposes without identifiers. Is this allowed?",
+    o: [
+      "Always",
+      "Only if truly de-identified",
+      "Never",
+      "With verbal consent only"
+    ],
+    a: 1,
+    r: "Information must be fully de-identified to protect privacy."
+  },
+  {
+    q: "Which action best protects the nurse legally?",
+    o: [
+      "Verbal reporting only",
+      "Clear documentation and policy adherence",
+      "Avoiding complex cases",
+      "Delegating frequently"
+    ],
+    a: 1,
+    r: "Following policy and documenting care provides legal protection."
+  },
+  {
+    q: "A nurse assists in a procedure without verifying consent. This exposes the nurse to:",
+    o: [
+      "Negligence",
+      "Battery",
+      "Justice violation",
+      "Defamation"
+    ],
+    a: 1,
+    r: "Procedures without consent constitute battery."
+  },
+  {
+    q: "A nurse discusses patient care on social media in general terms. This is:",
+    o: [
+      "Acceptable",
+      "Potential confidentiality breach",
+      "Encouraged education",
+      "Protected speech"
+    ],
+    a: 1,
+    r: "Even vague details can identify patients and violate confidentiality."
+  },
   {
     q: "A confused patient tries to leave the unit. What is the nurse’s FIRST legal responsibility?",
     o: [
